materi, soal, hubs

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.1",
     "aframe": "^1.4.2",
+    "howler": "^2.2.4",
     "mind-ar": "^1.2.3",
     "vue-meta": "^3.0.0-alpha.2"
   }
